# RABBIT

./: pyproject.toml
.github/workflows/: test.yml
src/rabbit/: __init__.py  cli.py  errors.py  main.py
src/rabbit/predictor/: __init__.py  core.py  features.py  models.py
src/rabbit/sources/: __init__.py  errors.py  github_api.py  retry_utils.py
tests/: test_cli.py  test_main.py
tests/tests_predictor/: test_models.py  test_predictor.py
tests/tests_sources/: test_github_api.py
